--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zcox2XJAms574" rel="nofollow">大纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=D8Ax1TtAnol74" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wf4N4cAnik9Rs0" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Sp8g2msSlexkp0" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oTQid61TrHh44" rel="nofollow">看中国</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tOA2cZR4kmZ74" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Nug07FB5h2d64" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=C9gN1Qpkmpp74" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VH-320x200.jpg"><p align="center">【最新疫情5·4】川普：世卫是一场灾难</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-320x200.jpg"><p align="center">【瘟疫与中共】死亡名单中党员占大多数</p></a>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1" title="【瘟疫与中共】死亡名单中党员占大多数""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" title="【最新疫情5·4】川普：世卫是一场灾难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VH-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" title="川普：中共犯了一个可怕错误 还不想承认""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VE-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" title="【思想领袖】章家敦：瘟疫加快中共垮台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-320x200.jpg">&nbsp;</a>
@@ -11,13 +12,12 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076254.md#1" title="【最新疫情5·3】库默：医疗设备不能依赖中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1208224252-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080130.md#1" title="遭央视谩骂的第二个美国人 班农说了啥？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1132789872-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079965.md#1" title="世界新闻日 中共打压新闻自由殃及全球生命""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png">&nbsp;</a>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://elbl2947.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081679.md#1">鳗鱼因忘了人类而胆怯 日本水族馆请你帮忙</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081451.md#1">数千条活鱼出现在墨西哥海滩 民众狂捡</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081679.md#1">鳗鱼因忘了人类而胆怯 日本水族馆请你帮忙</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081451.md#1">数千条活鱼出现在墨西哥海滩 民众狂捡</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081616.md#1">四川三岁女童疑遭继母虐待致死</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
@@ -26,7 +26,6 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078123.md#1">网民借“潘金莲”讽刺中共推卸疫情责任</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080048.md#1">网传邓朴方公开信 红二代：代表部分人心声</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077782.md#1">【现场视频】警察坐镇 沪强拆崧泽大道民房</a><br>
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079077.md#1">洪微：海外华人在瘟疫中学到了什么</a><br>
@@ -40,25 +39,27 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,430,200 人
+!共 355,431,946 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1">【瘟疫与中共】死亡名单中党员占大多数</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080214.md#1">蓬佩奥：大量证据将病毒和武汉实验室相联</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081103.md#1">李正宽：传孙力军握有最高机密 点中谁的死穴</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080048.md#1">网传邓朴方公开信 红二代：代表部分人心声</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080641.md#1">美《60分钟》主持人染疫：真的很害怕</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080270.md#1">【一线采访】佳木斯居民：当地疫情越发严重</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080236.md#1">新州：非洲外交官的担当和中共当局的冷酷</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080270.md#1">【一线采访】佳木斯居民：当地疫情越发严重</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12074206.md#1">为何改变对习近平看法 川普首次详细说明</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1">川普：中共犯了一个可怕错误 还不想承认</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080130.md#1">遭央视谩骂的第二个美国人 班农说了啥？</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080717.md#1">【疫情最前线】美日联手挺台湾参与世卫</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080208.md#1">大陆女星盗小松菜奈照片 修图后谎称是自己</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079994.md#1">疫情掀影业内战 片方转网络 影院坐困愁城</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077776.md#1">遭央视连骂三天 蓬佩奥反在中国人气飙升</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077007.md#1">【独家】早知疫情？中共频下生物安全通知</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/28/n12068528.md#1">“一带一路”带来“一带疫路”（经济篇）</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077995.md#1">【新闻看点】金替身疑云 好莱坞亲共遭疫重创</a><br>
@@ -102,8 +103,6 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/29/n12070921.md#1">川普下令情报机构彻查中共和世卫是否瞒疫</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/30/n12071484.md#1">【拍案惊奇】习为何去秦岭？五眼联盟查石正丽</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/29/n12071314.md#1">【独家】中共瞒疫情 特急通知曝四大真相</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/29/n12070830.md#1">【新闻看点】中共外交屡翻车 美或用两杀手锏</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/29/n12070902.md#1">【疫情最前线】45万人签署调查比尔·盖茨</a><br>
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yeV4kdxM4rAN64k5j2ZR7utRltdk6GhRif164" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=fetCla1CoEg2vDojt_x7tE1jvd1Bl-12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=o9FDr4Zk9LtOtldx7mUk68s4je9Am2cTg2hkq0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggth3bQ03hA7oKdTaGdSoxZn9m1SvXh54" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ey96pVNj8XMStXxCdRV7uQx6cZR4kmZ74" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=E4hAn39g6qYh0uIAkolk6oRlnjRQ4w9BsQB54" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=PvBlguBh0dkxgt5BjLUSpDRSsFE5pXZ7k0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaGUO3odQjkFgi2N4gshgs1NBmH12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=_iRmtGR2dZozdD0TqDND8xF6tUh6f9B7pyd44" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=OuV5gtxx3cwg52RlkeZyrDtmrPBymAJTvg12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=_iRmtGR2dMs3aNxCpXdyoHJmuDRzjUtSoc12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vh178M6ctRm8phlux5l8Z2nK5nsu12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=fzRnpWRP9ws2exxDtHdzsXJninRwv8tRkY12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=_iRmtGRidTAyvFlCuAc6qGpCp_YQvC1mj0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=0INCtHFifPoP9MJSpY9ioGh7uANjiVhCo312" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=E4hAn39g7t0gigVRgrERkj5Rjlo6kfJQm0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=cw1CuDVP9y8i9WYCtQBmdQBnuTBS3YVkkhV74" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yeV4kdx05owN64k5j2ZR7utRltdk6GhRif164" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8AhCvz92fYUPfEdTvAFjuON7sIhjgNNCqX12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=5FJSswtyfWc2tLd6o_QDtMN7oUkktEVSh0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=aCp6uB1ieF4O8YQ6tWtSdSZTvRJmc2NQknx74" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ey96pVNP9AgO9U46uSJScOJTu9tl3_xQljN74" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaRg4js12hxAhrdwgbJkm7RxrotQgI12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=K294hpNN25ENjmhlilglmptBtKYRrS1nn0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=9BtSvAdifYY3qPZ7pWADsY17rQ4ksIFSu0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/elbl2947/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/elbl2947/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079515.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/1-180-600x370-2-320x200.jpg"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079515.md#1">贵州政法委“清零行动” 欲彻底转化法轮功</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/13/n12027127.md#1">疫情下中共再办洗脑班 迫害法轮功学员</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078830.md#1">疫期人流少 上海青浦区政府趁机强拆民房</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078458.md#1">中共入人权理事会 被批“狐狸守鸡舍”</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077327.md#1">冉崇碧为女维权11年 揭中共打压访民真相</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12075559.md#1">被查的河北前副省长张和 涉鲜为人知命案</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/01/0f9f551c48017178c6873709f237753a-320x200.jpg"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081444.md#1">中国五一假期游客减半 收入仅去年三成</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080272.md#1">疫情中 大陆各行业劳资纠纷迭起</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079942.md#1">大众旗下品牌取消进中国计划 紧随全球趋势</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079925.md#1">瑞士议会前主席：瘟疫是对西方亲共的惩罚</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077164.md#1">华商经阿里巴巴购货遇黑心土豆?损失难获赔</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081164.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/2005040217132378-320x200.jpg"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081164.md#1">美国号召19国空军视讯防疫 台湾在列</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080769.md#1">学者：北京自杀式公关让欧中关系面临重整</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077181.md#1">金里奇揭中共在全球发起“战狼式”媒体战</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078651.md#1">中共肺炎起源调查 五眼报告跟美情报相似</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078663.md#1">中共软实力在崩溃 美学者促台推台版孔院</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078376.md#1">瑞典再发强音 拟要求欧盟彻查中共病毒根源</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/86389aaad808d609fb0e9a48ca3693a7-320x200.png"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081208.md#1">许广高速连州段小车撞防护栏起火 5人遇难</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080926.md#1">【现场视频】经历干旱冰雹后 云南又现日晕</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080864.md#1">南昌男子杀岳母及妻儿5人 网民热议</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080589.md#1">【疫情中的纽约人】“四维抗疫”的杨医生</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080488.md#1">美国安部报告：中共隐瞒病毒传染性抢占物资</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081616.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081616.md#1">四川三岁女童疑遭继母虐待致死</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081342.md#1">虐待殴打八旬老人 南通保姆被判刑</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080859.md#1">广州检疫点爆打斗事件 市民被打骨折</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080382.md#1">川警千里押解嫌犯归案 竟是无症感染者</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079817.md#1">金里奇：中共应为全球的死亡承担责任</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079425.md#1">四川宜宾大桥发生坠落事故 市民：太吓人了</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12074934.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/6e29c115b6d782f665d72f0d9d364f26-320x200.png"></a><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12074934.md#1">上海五星体育女主持患癌去世 年仅42岁</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12074794.md#1">以成绩胁迫性侵女学生 山东职校老师被刑拘</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/28/n12068432.md#1">疑与武汉病毒所有关 美NIH相关经费被削减</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/23/n12055153.md#1">【现场视频】恃强凌弱 河北女用鞋底抽打女孩</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/16/n12036597.md#1">炒作“渴望回归中国”文章 中共大外宣受挫</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/14/n12030609.md#1">99岁英老兵挑战自己 筹千万英镑支持医护</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/29/n12070927.md#1">【独家音频】中共监控民众有极隐密途径</a><br>
