--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,11 +13,11 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080130.md#1" title="遭央视谩骂的第二个美国人 班农说了啥？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1132789872-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079965.md#1" title="世界新闻日 中共打压新闻自由殃及全球生命""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://elbl2947.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】逾32万例确诊 2.4万多人死亡</a><br>
-:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】逾32万例确诊 2.4万多人死亡</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081679.md#1">鳗鱼因忘了人类而胆怯 日本水族馆请你帮忙</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
@@ -26,7 +26,6 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078123.md#1">网民借“潘金莲”讽刺中共推卸疫情责任</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12077782.md#1">【现场视频】警察坐镇 沪强拆崧泽大道民房</a><br>
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079077.md#1">洪微：海外华人在瘟疫中学到了什么</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078732.md#1">袁斌：建雷神山工人被逐与援湖北医护遭裁</a><br>
@@ -39,7 +38,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,433,670 人
+!共 355,435,884 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -111,10 +110,10 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/22/n12052032.md#1">【独家】中共密件频频针对湖北武汉人</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/21/n12049545.md#1">【内幕】中共瞒疫情 抽调各省医护援湖北</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/18/n12041822.md#1">【独家】中共秘档中记录的“法轮大法好”</a><br>
-<br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/6/n12007148.md#1">李林甫拆大门应凶谶  穷秀才丢白财得元宝</a><br>
+<br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/20/n12046031.md#1">大总统徐世昌测一字 奇人料定战争结局</a><br>
+<a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/6/n12007148.md#1">李林甫拆大门应凶谶  穷秀才丢白财得元宝</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079670.md#1">为民请命且以德立信 邓训积福荫及后代</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/26/n11977935.md#1">【品读宋词】词中帝王 风流千古</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/1/n12076297.md#1">守成贤主宋仁宗 驾崩后连敌国也举国哀痛</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/22/n12051570.md#1">解读达芬奇未完之作《圣·杰洛姆》画中含意</a><br>
-<a href="https://github.com/elbl2947/djy/blob/master/gb/20/4/12/n12024956.md#1">【馨香雅句】诗词中的女孩名</a><br>
 <br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/elbl2947/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/elbl2947/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
